contract update